# pyxel-ui

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: font_demo.py  showcase.py
pyxel_ui/: __init__.py  basic.py  containers.py  core.py  dialog.py  extras.py  fonts.py  form.py  grid.py  inputs.py  layout.py  table.py  textarea.py  theme.py  utils.py
pyxel_ui/fonts_data/: LICENSE-Cozette.txt  LICENSE-IBM-Fonts.txt
tests/: conftest.py  test_core.py  test_layout.py  test_theme.py  test_utils.py  test_widgets.py
