[project]
name = "pyxel-ui"
version = "0.3.0"
description = "Themeable UI widget toolkit for the Pyxel retro game engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = ["pyxel"]
keywords = ["pyxel", "ui", "widgets", "retro", "pixel-art", "game-engine"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: User Interfaces",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Repository = "https://github.com/VasilyPolyuhovich/pyxel-ui"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pyxel_ui*"]

[tool.setuptools.package-data]
pyxel_ui = ["fonts_data/*.bdf", "fonts_data/LICENSE-*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
